tests/NormalTests/paczka2/big_fuzzy/87936128.err
Error in line 7: HlSb S196 35,6
Error in line 11: SO9pj6gEU S49 2,3
Error in line 8: HlSb S49 25,6
Error in line 27: SO9pj6gEU S196 69,6
Error in line 30: Lk8PoxyFO S320 46,3
Error in line 24: Cma S320 17,3
Error in line 39: Lk8PoxyFO S49 16,3
Error in line 33: S59 S196 87,6
Error in line 47: SO9pj6gEU S59 94,5
Error in line 57: Cma S196 104,2
Error in line 60: HlSb S320 12,4
Error in line 61: Lk8PoxyFO S59 12,6
Error in line 66: Lk8PoxyFO S320 59,4
Error in line 71: Cma S196 37,2
Error in line 79: S59 S196 55,71
Error in line 67: S59 S196 70,7
Error in line 85: Lk8PoxyFO S196 80,7
Error in line 84: Cma S320 77,1
Error in line 93: mV7gcps S320 43,6
Error in line 59: SO9pj6gEU S196 171,7
Error in line 102: SO9pj6gEU S49 26,5
Error in line 111: S59 S59 34,1
Error in line 124: S59 S196 68,1
Error in line 138: SO9pj6gEU S320 88,7
Error in line 141: SO9pj6gEU S49 52,4
Error in line 151: HlSb S196 47,2
Error in line 154: S59 S59 48,50
Error in line 152: HlSb S49 46,4
Error in line 158: RNBIzFOa S49 47,3
Error in line 165: RNBIzFOa S320 3,2
Error in line 161: Lk8PoxyFO S49 240,9
Error in line 177: SO9pj6gEU S59 82,4
Error in line 189: HlSb S59 155,8
Error in line 198: SO9pj6gEU S49 64,0
Error in line 197: S59 S59 268,1
Error in line 213: Cma S196 238,7
Error in line 215: Cma S320 42,5
Error in line 217: Lk8PoxyFO S59 95,7
Error in line 212: RNBIzFOa S196 19,5
Error in line 232: SO9pj6gEU S49 57,0
Error in line 233: mV7gcps S320 27,2
Error in line 229: HlSb S196 36,3
Error in line 240: HlSb S59 48,4
